<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        app:contentPadding="10dp">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/good_image_view"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:contentDescription="@string/display_good_img"
                android:scaleType="centerCrop"
                android:layout_margin="8dp"/>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="2dp">
                    <TextView
                        android:text="@string/display_good_name"
                        android:id="@+id/good_name_text_view"
                        android:layout_weight="0.5"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:textColor="@android:color/black"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:text="@string/display_order_status"
                        android:id="@+id/order_status_text_view"
                        android:layout_weight="0.5"
                        android:textSize="12sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>
                <TextView
                    android:text="@string/display_rent_time"
                    android:id="@+id/rent_time_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:padding="2dp"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="2dp">
                    <TextView
                        android:text="@string/display_good_price"
                        android:id="@+id/good_price_text_view"
                        android:layout_weight="0.5"
                        android:layout_width="match_parent"
                        android:textSize="12sp"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:text="@string/display_order_price"
                        android:id="@+id/order_price_text_view"
                        android:layout_weight="0.5"
                        android:textSize="12sp"
                        android:textColor="@android:color/black"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <Button
                    android:id="@+id/order_control_button"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="2dp"
                    android:layout_marginEnd="56dp"
                    android:layout_gravity="end"
                    style="?android:attr/borderlessButtonStyle"
                    android:background="@drawable/order_button_background_shape"
                    android:text="@string/display_pay"
                    android:textColor="@color/colorAccent"
                    android:layout_width="wrap_content"
                    android:layout_height="32dp" />
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>