<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.GoodActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/cardview_light_background"
                android:elevation="2dp">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:text="@string/good_detail"
                        android:textSize="20sp"
                        android:textColor="@color/white"
                        android:padding="16dp"
                        android:gravity="center"
                        android:background="@color/colorPrimary"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                    <com.youth.banner.Banner
                        android:id="@+id/good_image_banner"
                        android:layout_width="match_parent"
                        android:layout_height="200dp" />
                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp">
                        <TextView
                            android:id="@+id/name_text_view"
                            android:textColor="@android:color/black"
                            android:textSize="16sp"
                            android:layout_marginTop="4dp"
                            android:layout_marginBottom="4dp"
                            android:text="@string/display_good_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                        <TextView
                            android:id="@+id/rent_info_text_view"
                            android:layout_marginTop="4dp"
                            android:layout_marginBottom="4dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/display_rent_info"
                            android:textSize="10sp" />

                        <TextView
                            android:id="@+id/price_text_view"
                            android:layout_marginTop="4dp"
                            android:layout_marginBottom="4dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/display_good_price"
                            android:textColor="@color/colorPrimary"
                            android:textSize="12sp" />

                        <TextView
                            android:id="@+id/desc_text_view"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/display_good_desc"
                            android:textSize="12sp" />
                    </LinearLayout>

                    <Button
                        android:id="@+id/good_control_button"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentTop="true"
                        android:text="@string/rent"
                        android:layout_marginEnd="16dp"
                        android:layout_marginTop="56dp"
                        android:layout_width="wrap_content"
                        android:layout_height="36dp"
                        android:textColor="@color/white"
                        style="@android:style/Widget.Material.Button"
                        android:background="@drawable/button_background_shape"/>
                </RelativeLayout>
            </LinearLayout>

            <TextView
                android:text="@string/good_evaluation"
                android:padding="10dp"
                android:textSize="14sp"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                app:cardCornerRadius="0dp"
                app:cardElevation="2dp">
                <TextView
                    android:text="@string/none_evaluation"
                    android:padding="10dp"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>