<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/parent_layout"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.MyFragment">

    <TextView
        android:text="@string/my"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:padding="16dp"
        android:gravity="center"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:elevation="2dp">

                <LinearLayout
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <Button
                        android:visibility="gone"
                        android:id="@+id/login_button"
                        android:text="@string/login"
                        android:textColor="@color/white"
                        style="@android:style/Widget.Material.Button"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="42dp"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp"
                        android:layout_margin="48dp"
                        android:background="@drawable/button_background_shape"/>
                    <LinearLayout
                        android:id="@+id/user_info_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="16dp">
                            <ImageView
                                android:id="@+id/user_avatar_image_view"
                                android:src="@drawable/avatar"
                                android:background="@drawable/avatar_backgroud_shape"
                                android:padding="8dp"
                                android:layout_width="64dp"
                                android:layout_height="64dp" />
                            <LinearLayout
                                android:orientation="vertical"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_marginLeft="16dp"
                                android:layout_marginRight="16dp">
                                <TextView
                                    android:layout_weight="1"
                                    android:id="@+id/user_name_text_view"
                                    android:text="@string/display_user_name"
                                    android:textColor="@color/white"
                                    android:gravity="center|start"
                                    android:textSize="16sp"
                                    android:paddingLeft="4dp"
                                    android:paddingRight="4dp"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent" />
                                <TextView
                                    android:layout_weight="1"
                                    android:text="@string/display_mobile"
                                    android:textColor="@color/white"
                                    android:id="@+id/user_mobile_text_view"
                                    android:gravity="center|start"
                                    android:drawableStart="@drawable/ic_phone_android_white_18dp"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent" />
                            </LinearLayout>
                        </LinearLayout>
                        <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/cardview_light_background"
                            android:padding="8dp">
                            <LinearLayout
                                android:layout_weight="1"
                                android:orientation="vertical"
                                android:gravity="center"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">
                                <TextView
                                    android:text="@string/display_money"
                                    android:gravity="center"
                                    android:padding="2dp"
                                    android:textSize="24sp"
                                    android:textColor="@color/colorAccent"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content" />
                                <TextView
                                    android:text="@string/wallet"
                                    android:gravity="center"
                                    android:padding="2dp"
                                    android:textColor="@android:color/black"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content" />
                            </LinearLayout>
                            <LinearLayout
                                android:layout_weight="1"
                                android:orientation="vertical"
                                android:gravity="center"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">
                                <TextView
                                    android:text="@string/number"
                                    android:gravity="center"
                                    android:padding="2dp"
                                    android:textSize="24sp"
                                    android:textColor="@android:color/holo_red_light"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content" />
                                <TextView
                                    android:text="@string/offer"
                                    android:gravity="center"
                                    android:padding="2dp"
                                    android:textColor="@android:color/holo_red_dark"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content" />
                            </LinearLayout>
                            <LinearLayout
                                android:layout_weight="1"
                                android:orientation="vertical"
                                android:gravity="center"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">
                                <TextView
                                    android:text="@string/number"
                                    android:gravity="center"
                                    android:padding="2dp"
                                    android:textSize="24sp"
                                    android:textColor="@android:color/holo_orange_light"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content" />
                                <TextView
                                    android:text="@string/wallet"
                                    android:gravity="center"
                                    android:padding="2dp"
                                    android:textColor="@android:color/black"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content" />
                            </LinearLayout>
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <android.support.v7.widget.CardView
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="0dp">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/rent_text_view"
                        android:text="@string/rent"
                        android:textSize="14sp"
                        android:gravity="center|start"
                        android:textColor="@android:color/black"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_polymer_blue_200_24dp"
                        android:drawableEnd="@drawable/ic_chevron_right_grey_500_24dp"
                        android:background="?android:attr/selectableItemBackground"
                        android:clickable="true"
                        android:drawablePadding="8dp"
                        android:padding="8dp"/>
                    <View
                        android:background="@android:color/darker_gray"
                        android:layout_width="match_parent"
                        android:layout_marginStart="40dp"
                        android:layout_height="1px"/>
                    <TextView
                        android:id="@+id/rent_record_text_view"
                        android:text="@string/rent_record"
                        android:textSize="14sp"
                        android:gravity="center|start"
                        android:textColor="@android:color/black"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_assessment_purple_300_24dp"
                        android:drawableEnd="@drawable/ic_chevron_right_grey_500_24dp"
                        android:background="?android:attr/selectableItemBackground"
                        android:clickable="true"
                        android:drawablePadding="8dp"
                        android:padding="8dp"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="0dp">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/my_good_text_view"
                        android:text="@string/my_good"
                        android:textSize="14sp"
                        android:gravity="center|start"
                        android:textColor="@android:color/black"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_star_orange_500_24dp"
                        android:drawableEnd="@drawable/ic_chevron_right_grey_500_24dp"
                        android:background="?android:attr/selectableItemBackground"
                        android:clickable="true"
                        android:drawablePadding="8dp"
                        android:padding="8dp"/>
                    <View
                        android:background="@android:color/darker_gray"
                        android:layout_width="match_parent"
                        android:layout_marginStart="40dp"
                        android:layout_height="1px"/>
                    <TextView
                        android:id="@+id/collection_text_view"
                        android:text="@string/my_collection"
                        android:textSize="14sp"
                        android:gravity="center|start"
                        android:textColor="@android:color/black"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_bookmark_red_400_24dp"
                        android:drawableEnd="@drawable/ic_chevron_right_grey_500_24dp"
                        android:background="?android:attr/selectableItemBackground"
                        android:clickable="true"
                        android:drawablePadding="8dp"
                        android:padding="8dp"/>
                    <View
                        android:background="@android:color/darker_gray"
                        android:layout_width="match_parent"
                        android:layout_marginStart="40dp"
                        android:layout_height="1px"/>
                    <TextView
                        android:id="@+id/custom_service_text_view"
                        android:text="@string/my_custom_service"
                        android:textSize="14sp"
                        android:gravity="center|start"
                        android:textColor="@android:color/black"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_perm_contact_calendar_blue_200_24dp"
                        android:drawableEnd="@drawable/ic_chevron_right_grey_500_24dp"
                        android:background="?android:attr/selectableItemBackground"
                        android:clickable="true"
                        android:drawablePadding="8dp"
                        android:padding="8dp"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/logout_container"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="0dp">
                <TextView
                    android:id="@+id/logout_text_view"
                    android:text="@string/logout"
                    android:padding="10dp"
                    android:gravity="center"
                    android:background="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </android.support.v7.widget.CardView>

        </LinearLayout>
    </ScrollView>
</LinearLayout>